Bug 337962: fix nsBookmarksService's QI to include nsICharsetResolver, r=neil, sr=bzbarsky