xpfe/components/bookmarks/src/nsBookmarksService.cpp
@@ -2536,7 +2536,7 @@ nsBookmarksService::Release()
     }
 }
 
-NS_IMPL_QUERY_INTERFACE9(nsBookmarksService, 
+NS_IMPL_QUERY_INTERFACE10(nsBookmarksService,
              nsIBookmarksService,
              nsIRDFDataSource,
              nsIRDFRemoteDataSource,
@@ -2544,6 +2544,7 @@ NS_IMPL_QUERY_INTERFACE9(nsBookmarksService,
              nsIRDFObserver,
              nsIStreamListener,
              nsIRequestObserver,
+             nsICharsetResolver,
              nsIObserver,
              nsISupportsWeakReference)
 
